View product page, Error on trying to upload image

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,11 @@
  * 
  */
 
+$white: #fff;
+$grey-ish: #333;
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import "home"
+@import "home";
+@import "products";
+@import "basket"
