--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,104 @@
 // Place all the styles related to the products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+//colors
+$alto: #dddddd;
+$lime_green: #74df00;
+$danger_red : #cc0000;
+$white: #fff;
+
+.product {
+	border: 1px solid $alto;
+	height: 321px;
+}
+.product>img {
+	max-width: 230px;
+}
+.product-title {
+	font-size: 20px;
+}
+.product-desc {
+	font-size: 14px;
+}
+.product-price {
+	font-size: 22px;
+}
+.product-avaliable {
+	color: $lime_green;
+	font-size: 20px;
+	margin-top: 10px;
+}
+.product-notavaliable {
+	color: $danger_red;
+	font-size: 20px;
+	margin-top: 10px;
+}
+
+.product-info {
+	margin-top: 50px;
+}
+.content-wrapper {
+	max-width: 1140px;
+	background: $white;
+	margin: 0 auto;
+	margin-top: 25px;
+	margin-bottom: 10px;
+	border: 0;
+	border-radius: 0;
+}
+.container-fluid {
+	max-width: 1140px;
+	margin: 0 auto;
+}
+.view-wrapper {
+	float: right;
+	max-width: 70%;
+	margin-top: 25px;
+}
+.container {
+	padding-left: 0;
+	padding-right: 0;
+	max-width: 100%;
+}
+.service1-items {
+	padding: 0;
+	float: left;
+	position: relative;
+	overflow: hidden;
+	max-width: 100%;
+	height: 321px;
+	width: 130px;
+}
+.service1-item {
+	height: 107px;
+	width: 120px;
+	display: block;
+	float: left;
+	position: relative;
+	padding-right: 20px;
+	border-right: 1px solid #DDD;
+	border-top: 1px solid #DDD;
+	border-bottom: 1px solid #DDD;
+	> img {
+		max-height: 110px;
+		max-width: 110px;
+		opacity: 0.6;
+		transition: all .2s ease-in;
+		&:hover {
+			cursor: pointer;
+			opacity: 1;
+		}
+	}
+}
+.service-image-left {
+	padding-right: 50px;
+	> center > img {
+		max-height: 155px;
+	}
+}
+.service-image-right {
+	padding-left: 50px;
+	> center > img {
+		max-height: 155px;
+	}
+}
