--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,69 +10,8 @@
   <meta name="author" content="Denis Sellu">
 </head>
 <body>
-<nav class="navbar navbar-default" role="navigation">
-				<div class="navbar-header">
-					 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="/">E-Commerce On Rails</a>
-				</div>
-				
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav">
-						<li class="dropdown">
-							 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Categories<strong class="caret"></strong></a>
-							<ul class="dropdown-menu">
-								<li>
-									<a href="#">Action</a>
-								</li>
-								<li>
-									<a href="#">Another action</a>
-								</li>
-								<li>
-									<a href="#">Something else here</a>
-								</li>
-								<li class="divider">
-								</li>
-								<li>
-									<a href="#">Separated link</a>
-								</li>
-								<li class="divider">
-								</li>
-								<li>
-									<a href="#">One more separated link</a>
-								</li>
-							</ul>
-						</li>
-					</ul>
+    <%= render(:partial => 'layouts/navigation') %>
 
-					<ul class="nav navbar-nav navbar-right">
-						<li>
-							<a href="#"><i class="glyphicon glyphicon-shopping-cart"> </i>cart</a>
-						</li>
-					<% if user_signed_in? %>
-
-						<li class="dropdown">
-							 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Hello, <%= (current_user.first_name).capitalize  %> <br />Your Account<strong class="caret"></strong></a>
-							<ul class="dropdown-menu">
-								<li>
-									<a href="#">Addresses</a>
-								</li>
-								<li class="divider">
-								<li>
-  									<%= link_to 'Logout', destroy_user_session_path, :method => :delete %>
-								</li>
-				
-							</ul>
-						</li>
-					<% else %>
-					<li>
-						<%= link_to 'Login', new_user_session_path %>
-					</li><li>
-						<%= link_to 'Sign up', new_user_registration_path %>
-					</li>
-<% end %>
-					</ul>
-				</div>
-				
-			</nav>
 <%= yield %>
 <a href="" src></a>
 <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
