--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 </head>
 <body>
     <%= render(:partial => 'layouts/navigation') %>
-
+<%= render_breadcrumbs %>
 <%= yield %>
 <a href="" src></a>
 <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
