--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,48 @@
-<h2>Sign up</h2>
+<div class="container">
+    <div class="row">
+        <div class="col-md-offset-5 col-md-3">
+            <div class="form-login">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+              <h2>Create an Account</h2>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+              <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+                <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @validatable %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+                <div class="field">
+                  <%= f.label :first_name %><br />
+                  <%= f.text_field :first_name, autofocus: true,:class=>"form-control input-sm" %>
+                </div> 
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+                <div class="field">
+                  <%= f.label :last_name %><br />
+                  <%= f.text_field :last_name ,:class=>"form-control input-sm" %>
+                </div> 
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+                <div class="field">
+                  <%= f.label :email %><br />
+                  <%= f.email_field :email,:class=>"form-control input-sm" %>
+                </div>
 
-<%= render "devise/shared/links" %>
+                <div class="field">
+                  <%= f.label :password %>
+                  <% if @validatable %>
+                  <em>(<%= @minimum_password_length %> characters minimum)</em>
+                  <% end %><br />
+                  <%= f.password_field :password, autocomplete: "off",:class=>"form-control input-sm" %>
+                </div>
+
+                <div class="field">
+                  <%= f.label :password_confirmation %><br />
+                  <%= f.password_field :password_confirmation, autocomplete: "off",:class=>"form-control input-sm" %>
+                </div>
+<br>
+                <span class="group-btn">     
+                 <%= f.submit "Register",:class=>'btn btn-primary btn-md' %></i>
+              </span>
+              <% end %>
+
+              <%= render "devise/shared/links" %>
+          </div>
+        </div>
+      </div>
+</div>
