--- a/app/views/address/_new_address_modal.html.erb
+++ b/app/views/address/_new_address_modal.html.erb
@@ -6,7 +6,7 @@
         <h4 class="modal-title">Add New address</h4>
       </div>
       <div class="modal-body">
-        <%= render :partial => "form",:locals => {:form_type => 'new', :values => ''} %>
+        <%= render :partial => "address/form",:locals => {:form_type => 'new', :values => ''} %>
         
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
