--- a/app/views/category/show.html.erb
+++ b/app/views/category/show.html.erb
@@ -1,1 +1,80 @@
-<%= @category.name %>
+<div class="container">	
+<% if !@sub_category.blank? %>
+	<div class="row">
+		<h2>Sub Categories</h2>
+		 <% @sub_category.each do |sub_category| %>
+		 <div class="col-xs-6 col-md-3">
+		 	<h3>
+				<%= link_to(sub_category.name, :controller => 'category', :action => 'show', :id => sub_category.id) %>
+		 	<h3>
+
+		 </div>
+		 <% end %>
+	</div>
+	<% end %>
+       <div class="row">
+           <div class="col-md-9">
+                 <h3>
+                        <%= @category.name %></h3>
+                </div>
+                <div class="col-md-3">
+                    <!-- Controls -->
+                    <div class="controls pull-right hidden-xs">
+                        <a class="left fa fa-chevron-left btn btn-success" href="#carousel-<%= @category.id %>"
+                            data-slide="prev"></a><a class="right fa fa-chevron-right btn btn-success" href="#carousel-<%= @category.id %>"
+                                data-slide="next"></a>
+                    </div>
+                </div>
+            </div>
+            <div id="carousel-<%= @category.id %>" class="carousel slide hidden-xs" data-ride="carousel">
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+
+                 <%  Product.where(category_id: @category.id).available?.active.each_slice(4).with_index  {|productGroup,index| %>
+                    <% if index == 0 %>
+                        <div class="item active"> <!-- New item Set -->
+                    <% else %>
+                        <div class="item"> <!-- New item Set -->
+                    <% end %>
+
+                        <div class="row">
+                        <% productGroup.each do |product| %>
+                            <div class="col-sm-3">
+                                <div class="col-item">
+                                    <div class="photo">
+                                        <img src="http://placehold.it/350x260" class="img-responsive" alt="a" />
+                                    </div>
+                                    <div class="info">
+                                        <div class="row">
+                                            <div class="price col-md-6">
+                                                <h5>
+                                                    <%= product.name %></h5>
+                                                <h5 class="price-text-color">
+                                                    &pound;<%= product.price %></h5>
+                                            </div>
+                                            
+                                        </div>
+                                        <div class="separator clear-left">
+                                            <p class="btn-add">
+                                         
+                                            <%= link_to(raw('<i class="fa fa-shopping-cart"></i> Add to Basket'), {:controller => 'basket', :action => 'add', :id => product.id}, class: "hidden-sm cart",remote: true) %>
+
+                                            </p>
+                                            <p class="btn-details">
+                                                <i class="fa fa-list"></i>
+                                                <%= link_to("More details", :controller => 'products', :action => 'show', :id => product.id) %>
+
+                                                </p>
+                                        </div>
+                                        <div class="clearfix">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                      <% end %>
+                    </div>
+                </div>
+              <% } %>
+          </div>
+      </div>
+</div>
